--- a/index.html
+++ b/index.html
@@ -667,7 +667,27 @@
                 maHocPhan: 'Bổ trợ',
                 tenHocPhan: 'Công pháp quốc tế (Môn bổ trợ)',
                 lopHocPhan: 'CPQT-ALL',
-                soThuTu: '6',
+                soThuTu: '1',
+                thu: 7,
+                ca: 1,
+                phongHoc: 'HTB',
+                giangVien: ''
+            },
+            {
+                maHocPhan: 'Bổ trợ',
+                tenHocPhan: 'Công pháp quốc tế (Môn bổ trợ)',
+                lopHocPhan: 'CPQT-ALL',
+                soThuTu: '2',
+                thu: 4,
+                ca: 3,
+                phongHoc: 'HTB',
+                giangVien: ''
+            },
+            {
+                maHocPhan: 'Bổ trợ',
+                tenHocPhan: 'Công pháp quốc tế (Môn bổ trợ)',
+                lopHocPhan: 'CPQT-ALL',
+                soThuTu: '3',
                 thu: 2,
                 ca: 4,
                 phongHoc: 'A404',
@@ -675,53 +695,23 @@
             },
             {
                 maHocPhan: 'Bổ trợ',
-                tenHocPhan: 'Công pháp quốc tế (Môn bổ trợ)',
-                lopHocPhan: 'CPQT-ALL',
-                soThuTu: '7',
-                thu: 3,
-                ca: 3,
-                phongHoc: 'HTB',
-                giangVien: ''
-            },
-            {
-                maHocPhan: 'Bổ trợ',
-                tenHocPhan: 'Công pháp quốc tế (Môn bổ trợ)',
-                lopHocPhan: 'CPQT-ALL',
-                soThuTu: '8',
-                thu: 7,
-                ca: 2,
-                phongHoc: 'D205',
-                giangVien: ''
-            },
-            {
-                maHocPhan: 'Bổ trợ',
-                tenHocPhan: 'Công pháp quốc tế (Môn bổ trợ)',
-                lopHocPhan: 'CPQT-ALL',
-                soThuTu: '9',
-                thu: 5,
-                ca: 2,
-                phongHoc: 'D205',
-                giangVien: ''
-            },
-            {
-                maHocPhan: 'Bổ trợ',
                 tenHocPhan: 'Kinh doanh quốc tế (Môn bổ trợ)',
                 lopHocPhan: 'KDQT-ALL',
                 soThuTu: '4',
-                thu: 7,
+                thu: 6,
                 ca: 3,
-                phongHoc: 'A300',
-                giangVien: 'Nguyễn Tường Lan'
+                phongHoc: 'A400',
+                giangVien: ''
             },
             {
                 maHocPhan: 'Bổ trợ',
                 tenHocPhan: 'Kinh doanh quốc tế (Môn bổ trợ)',
                 lopHocPhan: 'KDQT-ALL',
                 soThuTu: '5',
-                thu: 7,
+                thu: 6,
                 ca: 4,
-                phongHoc: 'A300',
-                giangVien: 'Nguyễn Tường Lan'
+                phongHoc: 'A400',
+                giangVien: ''
             },
             {
                 maHocPhan: 'Bổ trợ',
@@ -729,119 +719,150 @@
                 lopHocPhan: 'KDQT-ALL',
                 soThuTu: '6',
                 thu: 4,
-                ca: 2,
-                phongHoc: 'A400',
-                giangVien: ''
-            },
-            {
-                maHocPhan: 'Bổ trợ',
-                tenHocPhan: 'Quan hệ kinh tế quốc tế (Môn bổ trợ)',
-                lopHocPhan: 'QHKTQT-ALL',
-                soThuTu: '5',
-                thu: 6,
-                ca: 3,
-                phongHoc: 'D101',
-                giangVien: ''
-            },
-            {
-                maHocPhan: 'Bổ trợ',
-                tenHocPhan: 'Quan hệ kinh tế quốc tế (Môn bổ trợ)',
-                lopHocPhan: 'QHKTQT-ALL',
-                soThuTu: '6',
-                thu: 3,
-                ca: 2,
-                phongHoc: 'HTB',
-                giangVien: ''
-            },
-            {
-                maHocPhan: 'Bổ trợ',
-                tenHocPhan: 'Quan hệ kinh tế quốc tế (Môn bổ trợ)',
-                lopHocPhan: 'QHKTQT-ALL',
-                soThuTu: '7',
-                thu: 4,
-                ca: 3,
-                phongHoc: 'A400',
-                giangVien: ''
-            },
-            {
-                maHocPhan: 'Bổ trợ',
-                tenHocPhan: 'Quan hệ kinh tế quốc tế (Môn bổ trợ)',
-                lopHocPhan: 'QHKTQT-ALL',
-                soThuTu: '8',
-                thu: 7,
-                ca: 3,
-                phongHoc: 'A604',
-                giangVien: ''
-            },
-            {
-                maHocPhan: 'Bổ trợ',
-                tenHocPhan: 'Quan hệ kinh tế quốc tế (Môn bổ trợ)',
-                lopHocPhan: 'QHKTQT-ALL',
-                soThuTu: '9',
-                thu: 2,
-                ca: 3,
-                phongHoc: 'A306',
-                giangVien: ''
-            },
-            {
-                maHocPhan: 'Bổ trợ',
-                tenHocPhan: 'Đại cương truyền thông quốc tế (Môn bổ trợ)',
-                lopHocPhan: 'ĐCTTQT-ALL',
-                soThuTu: '7',
-                thu: 4,
-                ca: 4,
-                phongHoc: 'HTB',
-                giangVien: 'Hồ Thanh Tùng'
-            },
-            {
-                maHocPhan: 'Bổ trợ',
-                tenHocPhan: 'Đại cương truyền thông quốc tế (Môn bổ trợ)',
-                lopHocPhan: 'ĐCTTQT-ALL',
-                soThuTu: '8',
-                thu: 6,
                 ca: 2,
                 phongHoc: 'D110',
-                giangVien: 'Nguyễn Minh Tuấn'
+                giangVien: ''
             },
             {
                 maHocPhan: 'Bổ trợ',
-                tenHocPhan: 'Đại cương truyền thông quốc tế (Môn bổ trợ)',
-                lopHocPhan: 'ĐCTTQT-ALL',
-                soThuTu: '9',
-                thu: 7,
+                tenHocPhan: 'Quan hệ kinh tế quốc tế (Môn bổ trợ)',
+                lopHocPhan: 'QHKTQT-ALL',
+                soThuTu: '4',
+                thu: 4,
+                ca: 1,
+                phongHoc: 'D110',
+                giangVien: ''
+            },
+            {
+                maHocPhan: 'Bổ trợ',
+                tenHocPhan: 'Quan hệ kinh tế quốc tế (Môn bổ trợ)',
+                lopHocPhan: 'QHKTQT-ALL',
+                soThuTu: '5',
+                thu: 2,
                 ca: 3,
-                phongHoc: 'A702',
-                giangVien: 'Hồ Thanh Tùng'
+                phongHoc: 'A404',
+                giangVien: ''
+            },
+            {
+                maHocPhan: 'Bổ trợ',
+                tenHocPhan: 'Quan hệ kinh tế quốc tế (Môn bổ trợ)',
+                lopHocPhan: 'QHKTQT-ALL',
+                soThuTu: '6',
+                thu: 5,
+                ca: 4,
+                phongHoc: 'D110',
+                giangVien: ''
             },
             {
                 maHocPhan: 'Bổ trợ',
                 tenHocPhan: 'Đại cương truyền thông quốc tế (Môn bổ trợ)',
                 lopHocPhan: 'ĐCTTQT-ALL',
-                soThuTu: '10',
-                thu: 2,
-                ca: 1,
-                phongHoc: 'A306',
-                giangVien: 'Hồ Thanh Tùng'
-            },
-            {
-                maHocPhan: 'Bổ trợ',
-                tenHocPhan: 'Ngoại giao văn hóa (Môn bổ trợ)',
-                lopHocPhan: 'NGVH-ALL',
                 soThuTu: '1',
-                thu: 2,
-                ca: 4,
-                phongHoc: 'D101',
-                giangVien: 'Trần Thị Hương, Lương Thị Thu Hường'
+                thu: 6,
+                ca: 3,
+                phongHoc: 'D209',
+                giangVien: ''
             },
             {
                 maHocPhan: 'Bổ trợ',
-                tenHocPhan: 'Ngoại giao văn hóa (Môn bổ trợ)',
-                lopHocPhan: 'NGVH-ALL',
+                tenHocPhan: 'Đại cương truyền thông quốc tế (Môn bổ trợ)',
+                lopHocPhan: 'ĐCTTQT-ALL',
                 soThuTu: '2',
-                thu: 3,
+                thu: 7,
+                ca: 4,
+                phongHoc: 'D209',
+                giangVien: ''
+            },
+            {
+                maHocPhan: 'Bổ trợ',
+                tenHocPhan: 'Đại cương truyền thông quốc tế (Môn bổ trợ)',
+                lopHocPhan: 'ĐCTTQT-ALL',
+                soThuTu: '3',
+                thu: 4,
                 ca: 1,
-                phongHoc: 'A400',
-                giangVien: 'Trần Thị Hương, Lương Thị Thu Hường'
+                phongHoc: 'A300',
+                giangVien: ''
+            },
+        //Kỹ năng Ngoại ngữ
+            {
+                maHocPhan: 'E.024.03',
+                tenHocPhan: 'Kỹ năng thuyết trình',
+                lopHocPhan: 'KNTT-ALL',
+                soThuTu: '1',
+                thu: 7,
+                ca: 2,
+                phongHoc: 'D108',
+                giangVien: ''
+            },
+            {
+                maHocPhan: 'E.024.03',
+                tenHocPhan: 'Kỹ năng thuyết trình',
+                lopHocPhan: 'KNTT-ALL',
+                soThuTu: '2',
+                thu: 2,
+                ca: 1,
+                phongHoc: 'D108',
+                giangVien: ''
+            },
+            {
+                maHocPhan: 'E.024.03',
+                tenHocPhan: 'Kỹ năng thuyết trình',
+                lopHocPhan: 'KNTT-ALL',
+                soThuTu: '3',
+                thu: 6,
+                ca: 1,
+                phongHoc: 'D108',
+                giangVien: ''
+            },
+            {
+                maHocPhan: 'E.024.03',
+                tenHocPhan: 'Kỹ năng thuyết trình',
+                lopHocPhan: 'KNTT-ALL',
+                soThuTu: '4',
+                thu: 3,
+                ca: 4,
+                phongHoc: 'D108',
+                giangVien: ''
+            },
+            {
+                maHocPhan: 'E.024.03',
+                tenHocPhan: 'Kỹ năng thuyết trình',
+                lopHocPhan: 'KNTT-ALL',
+                soThuTu: '5',
+                thu: 6,
+                ca: 2,
+                phongHoc: 'D108',
+                giangVien: ''
+            },
+            {
+                maHocPhan: 'E.024.03',
+                tenHocPhan: 'Kỹ năng thuyết trình',
+                lopHocPhan: 'KNTT-ALL',
+                soThuTu: '6',
+                thu: 5,
+                ca: 4,
+                phongHoc: 'D109',
+                giangVien: ''
+            },
+            {
+                maHocPhan: 'E.041.03',
+                tenHocPhan: 'Kỹ năng tư duy phản biện',
+                lopHocPhan: 'KNTDPB-ALL',
+                soThuTu: '4',
+                thu: 3,
+                ca: 2,
+                phongHoc: 'D107',
+                giangVien: ''
+            },
+            {
+                maHocPhan: 'E.041.03',
+                tenHocPhan: 'Kỹ năng tư duy phản biện',
+                lopHocPhan: 'KNTDPB-ALL',
+                soThuTu: '5',
+                thu: 4,
+                ca: 2,
+                phongHoc: 'D207',
+                giangVien: ''
             },
 
             // Tiếng Anh chuyên ngành II
@@ -1197,11 +1218,12 @@
     function checkMissingSubjects() {
         const missingSubjects = [];
         const requiredSubjects = [
-            { code: 'E50.06.03', name: 'Tiếng Anh chuyên ngành II' },
-            { code: 'FC.003.02', name: 'Chủ nghĩa xã hội khoa học' },
-            { code: 'FC.010.02', name: 'Chính trị học đại cương' },
-            { code: 'IR.001.02', name: 'Lịch sử ngoại giao Việt Nam' },
-            { code: 'IR.040.03', name: 'Lịch sử quan hệ quốc tế hiện đại 1' }
+            { code: 'E50.07.03', name: 'Tiếng Anh chuyên ngành III' },
+            { code: 'FC.002.02', name: 'Kinh tế chính trị Mác - Lê Nin' },
+            { code: 'IL.003.02', name: 'Pháp luật đại cương' },
+            { code: 'IR.003.03', name: 'Phương pháp nghiên cứu quan hệ quốc tế' },
+            { code: 'IR.008.03', name: 'Lý luận quan hệ quốc tế' }
+            { code: 'IR.041.03', name: 'Lịch sử quan hệ quốc tế hiện đại 2' }
         ];
 
         requiredSubjects.forEach(subject => {
