--- a/index.html
+++ b/index.html
@@ -783,6 +783,87 @@
                 phongHoc: 'A300',
                 giangVien: ''
             },
+        //Kỹ năng Ngoại ngữ
+            {
+                maHocPhan: 'E.024.03',
+                tenHocPhan: 'Kỹ năng thuyết trình',
+                lopHocPhan: 'KNTT-ALL',
+                soThuTu: '1',
+                thu: 7,
+                ca: 2,
+                phongHoc: 'D108',
+                giangVien: ''
+            },
+            {
+                maHocPhan: 'E.024.03',
+                tenHocPhan: 'Kỹ năng thuyết trình',
+                lopHocPhan: 'KNTT-ALL',
+                soThuTu: '2',
+                thu: 2,
+                ca: 1,
+                phongHoc: 'D108',
+                giangVien: ''
+            },
+            {
+                maHocPhan: 'E.024.03',
+                tenHocPhan: 'Kỹ năng thuyết trình',
+                lopHocPhan: 'KNTT-ALL',
+                soThuTu: '3',
+                thu: 6,
+                ca: 1,
+                phongHoc: 'D108',
+                giangVien: ''
+            },
+            {
+                maHocPhan: 'E.024.03',
+                tenHocPhan: 'Kỹ năng thuyết trình',
+                lopHocPhan: 'KNTT-ALL',
+                soThuTu: '4',
+                thu: 3,
+                ca: 4,
+                phongHoc: 'D108',
+                giangVien: ''
+            },
+            {
+                maHocPhan: 'E.024.03',
+                tenHocPhan: 'Kỹ năng thuyết trình',
+                lopHocPhan: 'KNTT-ALL',
+                soThuTu: '5',
+                thu: 6,
+                ca: 2,
+                phongHoc: 'D108',
+                giangVien: ''
+            },
+            {
+                maHocPhan: 'E.024.03',
+                tenHocPhan: 'Kỹ năng thuyết trình',
+                lopHocPhan: 'KNTT-ALL',
+                soThuTu: '6',
+                thu: 5,
+                ca: 4,
+                phongHoc: 'D109',
+                giangVien: ''
+            },
+            {
+                maHocPhan: 'E.041.03',
+                tenHocPhan: 'Kỹ năng tư duy phản biện',
+                lopHocPhan: 'KNTDPB-ALL',
+                soThuTu: '4',
+                thu: 3,
+                ca: 2,
+                phongHoc: 'D107',
+                giangVien: ''
+            },
+            {
+                maHocPhan: 'E.041.03',
+                tenHocPhan: 'Kỹ năng tư duy phản biện',
+                lopHocPhan: 'KNTDPB-ALL',
+                soThuTu: '5',
+                thu: 4,
+                ca: 2,
+                phongHoc: 'D207',
+                giangVien: ''
+            },
             // Tiếng Anh chuyên ngành II
             {
                 maHocPhan: 'E50.07.03',
@@ -1140,7 +1221,7 @@
             { code: 'FC.002.02', name: 'Kinh tế chính trị Mác - Lê Nin' },
             { code: 'IL.003.02', name: 'Pháp luật đại cương' },
             { code: 'IR.003.03', name: 'Phương pháp nghiên cứu quan hệ quốc tế' },
-            { code: 'IR.008.03', name: 'Lý luận quan hệ quốc tế' }
+            { code: 'IR.008.03', name: 'Lý luận quan hệ quốc tế' },
             { code: 'IR.041.03', name: 'Lịch sử quan hệ quốc tế hiện đại 2' }
         ];
 
