--- a/index.html
+++ b/index.html
@@ -441,7 +441,7 @@
                 thu: 2,
                 ca: 3,
                 phongHoc: 'A504',
-                giangVien: ''
+                giangVien: 'Nguyễn Thị Giang'
             },
             {
                 maHocPhan: 'FC.002.02',
@@ -451,7 +451,7 @@
                 thu: 2,
                 ca: 4,
                 phongHoc: 'A504',
-                giangVien: ''
+                giangVien: 'Nguyễn Thị Giang'
             },
             {
                 maHocPhan: 'FC.002.02',
@@ -461,7 +461,7 @@
                 thu: 4,
                 ca: 3,
                 phongHoc: 'A604',
-                giangVien: ''
+                giangVien: 'Nguyễn Thị Như'
             },
             {
                 maHocPhan: 'FC.002.02',
@@ -471,7 +471,7 @@
                 thu: 4,
                 ca: 4,
                 phongHoc: 'A604',
-                giangVien: ''
+                giangVien: 'Đặng Thị Phương Duyên'
             },
             {
                 maHocPhan: 'FC.002.02',
@@ -481,7 +481,7 @@
                 thu: 5,
                 ca: 3,
                 phongHoc: 'A306',
-                giangVien: ''
+                giangVien: 'Đỗ Thị Nga'
             },
             {
                 maHocPhan: 'IL.003.02',
@@ -491,7 +491,7 @@
                 thu: 3,
                 ca: 3,
                 phongHoc: 'D101',
-                giangVien: ''
+                giangVien: 'Trần Hữu Duy Minh, Trịnh Phương Thảo'
             },
             {
                 maHocPhan: 'IL.003.02',
@@ -501,7 +501,7 @@
                 thu: 3,
                 ca: 4,
                 phongHoc: 'D101',
-                giangVien: ''
+                giangVien: 'Phạm Thanh Tùng'
             },
             {
                 maHocPhan: 'IL.003.02',
@@ -511,7 +511,7 @@
                 thu: 6,
                 ca: 3,
                 phongHoc: 'A300',
-                giangVien: ''
+                giangVien: 'Nguyễn Thị Phượng'
             },
             {
                 maHocPhan: 'IL.003.02',
@@ -521,7 +521,7 @@
                 thu: 6,
                 ca: 4,
                 phongHoc: 'A300',
-                giangVien: ''
+                giangVien: 'Trần Hữu Duy Minh, Nguyễn Thị Phượng'
             },
             {
                 maHocPhan: 'IR.003.03',
@@ -531,7 +531,7 @@
                 thu: 3,
                 ca: 4,
                 phongHoc: 'D209',
-                giangVien: ''
+                giangVien: 'Hà Anh Tuấn, Phạm Tuyết Mai'
             },
             {
                 maHocPhan: 'IR.003.03',
@@ -541,7 +541,7 @@
                 thu: 2,
                 ca: 4,
                 phongHoc: 'D209',
-                giangVien: ''
+                giangVien: 'Hoàng Thị Hạnh Trang, Lê Ngọc Hân'
             },
             {
                 maHocPhan: 'IR.003.03',
@@ -551,7 +551,7 @@
                 thu: 4,
                 ca: 3,
                 phongHoc: 'D101',
-                giangVien: ''
+                giangVien: 'Nguyễn Hoàng Như Thanh'
             },
             {
                 maHocPhan: 'IR.003.03',
@@ -561,7 +561,7 @@
                 thu: 4,
                 ca: 4,
                 phongHoc: 'D101',
-                giangVien: ''
+                giangVien: 'Lê Thị Ngọc Hân, Hoàng Thị Hạnh Trang'
             },
             {
                 maHocPhan: 'IR.003.03',
@@ -571,7 +571,7 @@
                 thu: 5,
                 ca: 4,
                 phongHoc: 'A504',
-                giangVien: ''
+                giangVien: 'Hà Anh Tuấn, Phạm Tuyết Mai'
             },
             {
                 maHocPhan: 'IR.041.03',
@@ -581,7 +581,7 @@
                 thu: 2,
                 ca: 3,
                 phongHoc: 'A702',
-                giangVien: ''
+                giangVien: 'Hoàng Tùng Lan'
             },
             {
                 maHocPhan: 'IR.041.03',
@@ -591,7 +591,7 @@
                 thu: 2,
                 ca: 4,
                 phongHoc: 'A702',
-                giangVien: ''
+                giangVien: 'Hoàng Tùng Lan'
             },
             {
                 maHocPhan: 'IR.041.03',
@@ -601,7 +601,7 @@
                 thu: 4,
                 ca: 3,
                 phongHoc: 'D110',
-                giangVien: ''
+                giangVien: 'Nguyễn Thị Hạnh, Vũ Thảo Ly'
             },
             {
                 maHocPhan: 'IR.041.03',
@@ -611,7 +611,7 @@
                 thu: 4,
                 ca: 4,
                 phongHoc: 'D110',
-                giangVien: ''
+                giangVien: 'Hoàng Tùng Lan'
             },
             {
                 maHocPhan: 'IR.041.03',
@@ -621,7 +621,7 @@
                 thu: 5,
                 ca: 4,
                 phongHoc: 'A502',
-                giangVien: ''
+                giangVien: 'Nguyễn Thị Hạnh, Vũ Thảo Ly'
             },
             {
                 maHocPhan: 'IR.008.03',
@@ -631,7 +631,7 @@
                 thu: 7,
                 ca: 3,
                 phongHoc: 'HTB',
-                giangVien: ''
+                giangVien: 'Đỗ Thị Thủy'
             },
             {
                 maHocPhan: 'IR.008.03',
@@ -641,7 +641,7 @@
                 thu: 4,
                 ca: 4,
                 phongHoc: 'A400',
-                giangVien: ''
+                giangVien: 'Hà Anh Tuấn, Phạm Tuyết Mai'
             },
             {
                 maHocPhan: 'IR.008.03',
@@ -651,17 +651,7 @@
                 thu: 5,
                 ca: 3,
                 phongHoc: 'HTB',
-                giangVien: ''
-            },
-            {
-                maHocPhan: 'Bổ trợ',
-                tenHocPhan: 'Luật hiến pháp Việt Nam và các nước (Môn bổ trợ)',
-                lopHocPhan: 'LHPVN&CN-ALL',
-                soThuTu: '1',
-                thu: 4,
-                ca: 4,
-                phongHoc: 'A400',
-                giangVien: ''
+                giangVien: 'Hà Anh Tuấn, Phạm Tuyết Mai'
             },
             {
                 maHocPhan: 'Bổ trợ',
@@ -671,7 +661,7 @@
                 thu: 7,
                 ca: 1,
                 phongHoc: 'HTB',
-                giangVien: ''
+                giangVien: 'Bùi Hương Giang, Hoàng Thị Ngọc Anh'
             },
             {
                 maHocPhan: 'Bổ trợ',
@@ -681,7 +671,7 @@
                 thu: 4,
                 ca: 3,
                 phongHoc: 'HTB',
-                giangVien: ''
+                giangVien: 'Hoàng Thị Ngọc Anh'
             },
             {
                 maHocPhan: 'Bổ trợ',
@@ -691,7 +681,7 @@
                 thu: 2,
                 ca: 4,
                 phongHoc: 'A404',
-                giangVien: ''
+                giangVien: 'Bùi Hương Giang'
             },
             {
                 maHocPhan: 'Bổ trợ',
@@ -701,7 +691,7 @@
                 thu: 6,
                 ca: 3,
                 phongHoc: 'A400',
-                giangVien: ''
+                giangVien: 'Trịnh Ngọc Hoài Anh'
             },
             {
                 maHocPhan: 'Bổ trợ',
@@ -711,7 +701,7 @@
                 thu: 6,
                 ca: 4,
                 phongHoc: 'A400',
-                giangVien: ''
+                giangVien: 'Trịnh Ngọc Hoài Anh'
             },
             {
                 maHocPhan: 'Bổ trợ',
@@ -721,7 +711,7 @@
                 thu: 4,
                 ca: 2,
                 phongHoc: 'D110',
-                giangVien: ''
+                giangVien: 'Trịnh Ngọc Hoài Anh'
             },
             {
                 maHocPhan: 'Bổ trợ',
@@ -731,7 +721,7 @@
                 thu: 4,
                 ca: 1,
                 phongHoc: 'D110',
-                giangVien: ''
+                giangVien: 'Hoàng Ngọc Bích'
             },
             {
                 maHocPhan: 'Bổ trợ',
@@ -741,7 +731,7 @@
                 thu: 2,
                 ca: 3,
                 phongHoc: 'A404',
-                giangVien: ''
+                giangVien: 'Hoàng Ngọc Bích'
             },
             {
                 maHocPhan: 'Bổ trợ',
@@ -751,7 +741,7 @@
                 thu: 5,
                 ca: 4,
                 phongHoc: 'D110',
-                giangVien: ''
+                giangVien: 'Hoàng Ngọc Bích'
             },
             {
                 maHocPhan: 'Bổ trợ',
@@ -761,7 +751,7 @@
                 thu: 6,
                 ca: 3,
                 phongHoc: 'D209',
-                giangVien: ''
+                giangVien: 'Hồ Thanh Tùng, Ngô Tùng Lâm'
             },
             {
                 maHocPhan: 'Bổ trợ',
@@ -771,7 +761,7 @@
                 thu: 7,
                 ca: 4,
                 phongHoc: 'D209',
-                giangVien: ''
+                giangVien: 'Hồ Thanh Tùng'
             },
             {
                 maHocPhan: 'Bổ trợ',
@@ -781,88 +771,7 @@
                 thu: 4,
                 ca: 1,
                 phongHoc: 'A300',
-                giangVien: ''
-            },
-        //Kỹ năng Ngoại ngữ
-            {
-                maHocPhan: 'E.024.03',
-                tenHocPhan: 'Kỹ năng thuyết trình',
-                lopHocPhan: 'KNTT-ALL',
-                soThuTu: '1',
-                thu: 7,
-                ca: 2,
-                phongHoc: 'D108',
-                giangVien: ''
-            },
-            {
-                maHocPhan: 'E.024.03',
-                tenHocPhan: 'Kỹ năng thuyết trình',
-                lopHocPhan: 'KNTT-ALL',
-                soThuTu: '2',
-                thu: 2,
-                ca: 1,
-                phongHoc: 'D108',
-                giangVien: ''
-            },
-            {
-                maHocPhan: 'E.024.03',
-                tenHocPhan: 'Kỹ năng thuyết trình',
-                lopHocPhan: 'KNTT-ALL',
-                soThuTu: '3',
-                thu: 6,
-                ca: 1,
-                phongHoc: 'D108',
-                giangVien: ''
-            },
-            {
-                maHocPhan: 'E.024.03',
-                tenHocPhan: 'Kỹ năng thuyết trình',
-                lopHocPhan: 'KNTT-ALL',
-                soThuTu: '4',
-                thu: 3,
-                ca: 4,
-                phongHoc: 'D108',
-                giangVien: ''
-            },
-            {
-                maHocPhan: 'E.024.03',
-                tenHocPhan: 'Kỹ năng thuyết trình',
-                lopHocPhan: 'KNTT-ALL',
-                soThuTu: '5',
-                thu: 6,
-                ca: 2,
-                phongHoc: 'D108',
-                giangVien: ''
-            },
-            {
-                maHocPhan: 'E.024.03',
-                tenHocPhan: 'Kỹ năng thuyết trình',
-                lopHocPhan: 'KNTT-ALL',
-                soThuTu: '6',
-                thu: 5,
-                ca: 4,
-                phongHoc: 'D109',
-                giangVien: ''
-            },
-            {
-                maHocPhan: 'E.041.03',
-                tenHocPhan: 'Kỹ năng tư duy phản biện',
-                lopHocPhan: 'KNTDPB-ALL',
-                soThuTu: '4',
-                thu: 3,
-                ca: 2,
-                phongHoc: 'D107',
-                giangVien: ''
-            },
-            {
-                maHocPhan: 'E.041.03',
-                tenHocPhan: 'Kỹ năng tư duy phản biện',
-                lopHocPhan: 'KNTDPB-ALL',
-                soThuTu: '5',
-                thu: 4,
-                ca: 2,
-                phongHoc: 'D207',
-                giangVien: ''
+                giangVien: 'Lê Ngọc Thùy Dương'
             },
             // Tiếng Anh chuyên ngành II
             {
