--- a/index.html
+++ b/index.html
@@ -440,7 +440,7 @@
                 thu: 3,
                 ca: 3,
                 phongHoc: 'D209',
-                giangVien: ''
+                giangVien: 'Nguyễn Văn Tài'
             },
             {
                 maHocPhan: 'FC.005.02',
@@ -450,7 +450,7 @@
                 thu: 3,
                 ca: 4,
                 phongHoc: 'D209',
-                giangVien: ''
+                giangVien: 'Nguyễn Văn Tài'
             },
             {
                 maHocPhan: 'FC.005.02',
@@ -460,7 +460,7 @@
                 thu: 7,
                 ca: 4,
                 phongHoc: 'A702',
-                giangVien: ''
+                giangVien: 'Nguyễn Văn Khoa'
             },
             {
                 maHocPhan: 'FC.005.02',
@@ -470,7 +470,7 @@
                 thu: 6,
                 ca: 3,
                 phongHoc: 'A602',
-                giangVien: ''
+                giangVien: 'Trần Thị Quỳnh Diễn'
             },
             {
                 maHocPhan: 'FC.005.02',
@@ -480,7 +480,7 @@
                 thu: 6,
                 ca: 4,
                 phongHoc: 'A602',
-                giangVien: ''
+                giangVien: 'Trần Thị Quỳnh Diễn'
             },
             {
                 maHocPhan: 'IR.025.03',
@@ -699,7 +699,7 @@
                 thu: 4,
                 ca: 4,
                 phongHoc: 'A400',
-                giangVien: ''
+                giangVien: 'Trịnh Ngọc Hoài Anh'
             },
             {
                 maHocPhan: 'Bổ trợ',
@@ -709,7 +709,7 @@
                 thu: 6,
                 ca: 3,
                 phongHoc: 'HTB',
-                giangVien: ''
+                giangVien: 'Trịnh Ngọc Hoài Anh'
             },
             {
                 maHocPhan: 'Bổ trợ',
@@ -719,7 +719,7 @@
                 thu: 2,
                 ca: 1,
                 phongHoc: 'HTB',
-                giangVien: ''
+                giangVien: 'Trịnh Ngọc Hoài Anh'
             },
             {
                 maHocPhan: 'Bổ trợ',
@@ -729,7 +729,7 @@
                 thu: 7,
                 ca: 2,
                 phongHoc: 'A604',
-                giangVien: ''
+                giangVien: 'Trịnh Ngọc Hoài Anh'
             },
             {
                 maHocPhan: 'Bổ trợ',
@@ -759,7 +759,7 @@
                 thu: 5,
                 ca: 2,
                 phongHoc: 'D205',
-                giangVien: ''
+                giangVien: 'Tào Thị Thanh Hương'
             },
             {
                 maHocPhan: 'Bổ trợ',
@@ -775,21 +775,11 @@
                 maHocPhan: 'Bổ trợ',
                 tenHocPhan: 'Đại cương truyền thông quốc tế (Môn bổ trợ)',
                 lopHocPhan: 'ĐCTTQT-ALL',
-                soThuTu: '1',
-                thu: 6,
-                ca: 3,
-                phongHoc: 'D209',
-                giangVien: 'Hồ Thanh Tùng, Ngô Tùng Lâm'
-            },
-            {
-                maHocPhan: 'Bổ trợ',
-                tenHocPhan: 'Đại cương truyền thông quốc tế (Môn bổ trợ)',
-                lopHocPhan: 'ĐCTTQT-ALL',
                 soThuTu: '6',
                 thu: 2,
                 ca: 4,
                 phongHoc: 'D110',
-                giangVien: ''
+                giangVien: 'Nguyễn Minh Tuấn'
             },
             {
                 maHocPhan: 'Bổ trợ',
@@ -799,7 +789,7 @@
                 thu: 4,
                 ca: 3,
                 phongHoc: 'D110',
-                giangVien: ''
+                giangVien: 'Nguyễn Minh Tuấn'
             },
             {
                 maHocPhan: 'Bổ trợ',
@@ -809,7 +799,7 @@
                 thu: 6,
                 ca: 4,
                 phongHoc: 'A300',
-                giangVien: ''
+                giangVien: 'Nguyễn Minh Tuấn'
             },
             {
                 maHocPhan: 'Bổ trợ',
@@ -819,7 +809,7 @@
                 thu: 7,
                 ca: 2,
                 phongHoc: 'A701',
-                giangVien: ''
+                giangVien: 'Hồ Thanh Tùng'
             },
             {
                 maHocPhan: 'Bổ trợ',
@@ -829,7 +819,7 @@
                 thu: 6,
                 ca: 1,
                 phongHoc: 'D209',
-                giangVien: ''
+                giangVien: 'Hồ Thanh Tùng'
             },
             // Tiếng Anh chuyên ngành
             {
